# agentic-asp-solver

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  langgraph.json  pyproject.toml
.github/workflows/: integration-tests.yml  unit-tests.yml
examples/: company_controls.md  graph_coloring.md  shift_assignment.md
prompts/: asp_guidelines.md  mcp_instructions.md  solver_instructions.md  tester_instructions.md  validator_instructions.md
src/almasp/: __init__.py  batch_runner.py  cli.py  exceptions.py  graph.py  llm.py  main.py  mcp_client.py  prompts.py  result.py  runner.py  scrapper.py  utils.py  webapp.py  workflow.py
src/asper/: __init__.py  batch_runner.py  cli.py  config.py  errors.py  exceptions.py  graph.py  llm.py  main.py  mcp_client.py  prompts.py  result.py  runner.py  scrapper.py  state.py  utils.py  webapp.py  workflow.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py  test_mcp_client.py
